[package]
name = "flake-graph"
version = "0.1.0"
edition = "2021"
description = "Produce DOT graphs from Nix flake.lock files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.183", features = ["derive"] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
clap = { version = "4.5.26", features = ["derive"] }
log = "0.4.24"
env_logger = "0.11.6"
